# rust-chip-8-emu

./: .gitignore  Cargo.toml  LICENSE  README.md
ch8_core/: Cargo.toml
ch8_core/src/: audio.rs  lib.rs
ch8_egui_frontend/: Cargo.toml
ch8_egui_frontend/src/: gui.rs  main.rs
src/: core.rs  gui.rs  main.rs  sound.rs
