[package]
name = "chip-8-emu"
version = "0.1.0"
edition = "2021"
authors = ["Enrico Koschel"]
description = "Chip-8 emulator"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { git = "https://github.com/emilk/egui", rev = "e3f993d7b4abc2d9001a45eb6e6b26d3a6ae0388"}
eframe = { git = "https://github.com/emilk/egui", rev = "e3f993d7b4abc2d9001a45eb6e6b26d3a6ae0388"}
egui_extras = { git = "https://github.com/emilk/egui", rev = "e3f993d7b4abc2d9001a45eb6e6b26d3a6ae0388"}
winit = "0.27.1"
spin_sleep = "1.1.1"
single_value_channel = "1.2.2"
crossbeam-channel = "0.5.6"
pixel_buf = { git = "https://github.com/enricoKoschel/pixel_buf/", rev = "93a45981f449cea77de6e38d655facd334771bfc" }
rand = "0.8.5"
rfd = "0.10.0"
log = "0.4.17"
env_logger = "0.9.0"
