[package]
name = "ch8_egui_frontend"
version = "0.1.0"
edition = "2021"
authors = ["Enrico Koschel"]
description = "Chip-8 emulator egui frontend"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ch8_core = { path = "../ch8_core" }
egui = "0.20.1"
eframe = { version = "0.20.1", features = ["dark-light"] }
egui_extras = "0.20.0"
rfd = "0.10.0"
log = "0.4.17"
env_logger = "0.10.0"
egui_dnd = "0.1.0"
egui-bind = "0.5.2"
